After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726591 - W32: GL plugins can't be built in -bad
W32: GL plugins can't be built in -bad
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 726572 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-03-18 00:14 UTC by LRN
Modified: 2014-03-18 06:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Check for X unconditionally (1.12 KB, patch)
2014-03-18 00:16 UTC, LRN
committed Details | Review
Fix the use of always-defined macros (4.35 KB, patch)
2014-03-18 00:16 UTC, LRN
committed Details | Review
Don't default to GST_GL_HAVE_WINDOW_DISPMANX=1 (838 bytes, patch)
2014-03-18 00:16 UTC, LRN
committed Details | Review

Description LRN 2014-03-18 00:14:09 UTC
-gl used to build fine, but new gl-in-bad doesn't.
There are multiple problems in configure script, as well as the new use of
always-defined macros.
Comment 1 LRN 2014-03-18 00:16:12 UTC
Created attachment 272214 [details] [review]
Check for X unconditionally

Without this the HAVE_X macro is empty, not "no" or "yes", which is not
what the later code is counting on.
Comment 2 LRN 2014-03-18 00:16:17 UTC
Created attachment 272215 [details] [review]
Fix the use of always-defined macros

After 2a0f0399ae226089c2ba07b1b904741b856f37af GST_GL_* macros are always
defined to 0 or 1. Don't use #ifdef ... or #if defined() on them.
Comment 3 LRN 2014-03-18 00:16:21 UTC
Created attachment 272216 [details] [review]
Don't default to GST_GL_HAVE_WINDOW_DISPMANX=1
Comment 4 Julien Isorce 2014-03-18 06:22:58 UTC
Comment on attachment 272214 [details] [review]
Check for X unconditionally

commit 26049ca402e71d5fe003ac86f80d80114c9f8ef6
Author: Руслан Ижбулатов <lrn1986@gmail.com>
Date:   Tue Mar 18 00:07:43 2014 +0000

    gl: check for X unconditionally
    
    Without this the HAVE_X macro is empty, not "no" or "yes", which is not
    what the later code is counting on.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=726591
Comment 5 Julien Isorce 2014-03-18 06:23:27 UTC
Comment on attachment 272215 [details] [review]
Fix the use of always-defined macros

commit 2a8f52a97652b93631a4780523fc9cbdb55e65be
Author: Руслан Ижбулатов <lrn1986@gmail.com>
Date:   Tue Mar 18 00:08:50 2014 +0000

    gl: fix the use of always-defined macros
    
    After 2a0f0399ae226089c2ba07b1b904741b856f37af GST_GL_* macros are always
    defined to 0 or 1. Don't use #ifdef ... or #if defined() on them.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=726591
Comment 6 Julien Isorce 2014-03-18 06:23:54 UTC
Comment on attachment 272216 [details] [review]
Don't default to GST_GL_HAVE_WINDOW_DISPMANX=1

commit e509f7d5f7207dcf30fed53dafa4397c3af7cdb4
Author: Руслан Ижбулатов <lrn1986@gmail.com>
Date:   Tue Mar 18 00:11:09 2014 +0000

    gl: don't default to GST_GL_HAVE_WINDOW_DISPMANX=1
    
    Mistake introduced by 2a0f0399ae226089c2ba07b1b904741b856f37af
    
    https://bugzilla.gnome.org/show_bug.cgi?id=726591
Comment 7 Julien Isorce 2014-03-18 06:26:05 UTC
Thx for those patchs!   (I should fix my email next time this is not <patch@MacBook-Air-de-julien-isorce.local> :) )
Comment 8 Julien Isorce 2014-03-18 06:29:39 UTC
*** Bug 726572 has been marked as a duplicate of this bug. ***